# Corporate-Culture-Community

./: .dockerignore  .gitignore  Dockerfile  README.md  THREAT_MODEL.md  fly.toml
backend/: .env.example  README.md  alembic.ini  main.py  pyproject.toml
backend/app/: auth.py  config.py  utils.py
backend/app/models/: __init__.py  data_models.py
backend/app/routes/: __init__.py  labels.py  location.py  rating.py  user.py
backend/app/routes/dto/: __init__.py  label.py  location.py  rating.py  user.py
backend/app/service/: __init__.py  authorization.py  database.py
backend/app/utils/: limiter.py  sanitization.py
backend/migrations/: env.py
backend/migrations/versions/: 0994a715f489_init.py  3633cddb11be_add_password_reset_token_to_users.py  5473d5758aac_remove_seed_column_from_users_table.py  8e3a269adadb_add_departments.py  d47b44d93def_update_user_model_with_optional_fields_.py
backend/tests/: test_auth.py  test_location_filters_simple.py  test_user_endpoints.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  Layout.tsx  dataProvider.ts  theme.ts  types.ts
frontend/src/auth/: authProvider.ts
frontend/src/components/: Departments.tsx  Footer.tsx  Header.tsx  Login.test.tsx  Login.tsx  RatingSection.tsx  ShareExperience.tsx  Signup.test.tsx  Signup.tsx  Statistics.tsx  VenueCard.tsx  VenueDetailCard.tsx  VenueFilter.tsx  VenueList.tsx  backToMarket.tsx
frontend/src/hooks/: useFormValidation.ts
frontend/src/pages/: 404NotFound.tsx  AddLocation.tsx  Imprint.tsx  LandingPage.tsx  Location.tsx  PrivacyPolicy.tsx  (+5 more)
(+22 files in other folders)
