[tool.poetry]
name = "Corporate-Culture-Community-Backend"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{ include = "app" }]


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.119.1"
alembic = "^1.15.2"
uvicorn = "^0.38.0"
psycopg2-binary = "^2.9.10"
sqlmodel = "^0.0.27"
datetime = "^5.5"
python-multipart = "^0.0.20"
pyjwt = "^2.10.1"
faker = "^37.1.0"
black = "^25.1.0"
alembic-postgresql-enum = "^1.7.0"
filetype = "^1.2.0"
asyncpg = "^0.30.0"
greenlet = "^3.2.4"
python-dotenv = "^1.2.1"
python-jose = "^3.5.0"
passlib = "^1.7.4"
pwdlib = {extras = ["argon2"], version = "^0.3.0"}


[tool.poetry.group.dev.dependencies]
black = "^25.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
target-version = ["py312"] 
include = '\.pyi?$'
exclude = '''
/(
    \.venv
  | \.mypy_cache
  | \.pytest_cache
  | build
  | dist
)/
'''
